--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
 		"start:dev": "npx cross-env NODE_ENV=development node_modules/.bin/webpack-dev-server --mode development",
 		"build:prod": "npx cross-env NODE_ENV=production node_modules/.bin/webpack  --mode production",
 		"build:dev": "npx cross-env NODE_ENV=development node_modules/.bin/webpack",
-		"lint": "eslint ./ --ignore-path .gitignore",
+		"lint": "eslint ./ --ignore-path .eslintignore",
 		"lint:fix": "npm run lint -- --fix",
 		"format": "prettier --write \"{,!(node_modules)/**/}*.js\""
 	},
@@ -37,6 +37,7 @@
 		"clean-webpack-plugin": "^4.0.0",
 		"css-loader": "^6.7.1",
 		"eslint": "^8.17.0",
+		"eslint-plugin-react": "^7.30.0",
 		"html-webpack-plugin": "^5.5.0",
 		"mini-css-extract-plugin": "^2.6.0",
 		"prettier": "^2.7.1",
