--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,23 +1,20 @@
-{ 
-    "parser": "@babel/eslint-parser",
-    "parserOptions": {
-        "ecmaVersion": 2017,
-        "ecmaFeatures": {
-          "jsx": true
-        }
-      },
-    "env": {
-        "es6": true,
-        "browser": true,
-        "node": true
-    },
-    "extends": [
-        "eslint:recommended",
-        "plugin:react/recommended"
-    ],
-    "settings": {
-        "react": {
-        "version": "detect"
-        }
+{
+  "parser": "@babel/eslint-parser",
+  "parserOptions": {
+    "ecmaVersion": 2017,
+    "ecmaFeatures": {
+      "jsx": true
     }
+  },
+  "env": {
+    "es6": true,
+    "browser": true,
+    "node": true
+  },
+  "extends": ["eslint:recommended", "plugin:react/recommended", "prettier"],
+  "settings": {
+    "react": {
+      "version": "detect"
+    }
+  }
 }
