--- a/package.json
+++ b/package.json
@@ -1,49 +1,56 @@
 {
-	"name": "netflix_roulette_app",
-	"version": "1.0.0",
-	"description": "ReactJS mentoring home task",
-	"main": "index.js",
-	"scripts": {
-		"start:prod": "npx cross-env NODE_ENV=production node_modules/.bin/webpack-dev-server --mode production",
-		"start:dev": "npx cross-env NODE_ENV=development node_modules/.bin/webpack-dev-server --mode development",
-		"build:prod": "npx cross-env NODE_ENV=production node_modules/.bin/webpack  --mode production",
-		"build:dev": "npx cross-env NODE_ENV=development node_modules/.bin/webpack",
-		"lint": "eslint ./ --ignore-path .eslintignore",
-		"lint:fix": "npm run lint -- --fix",
-		"format": "prettier --write \"{,!(node_modules)/**/}*.js\""
-	},
-	"author": "Karolina Habryn",
-	"license": "ISC",
-	"dependencies": {
-		"@babel/eslint-parser": "^7.18.2",
-		"@mdi/js": "^6.7.96",
-		"@mdi/react": "^1.6.0",
-		"material-design-icons": "^3.0.1",
-		"prop-types": "^15.8.1",
-		"react": "^18.1.0",
-		"react-dom": "^18.1.0"
-	},
-	"devDependencies": {
-		"@babel/core": "^7.17.12",
-		"@babel/plugin-proposal-class-properties": "^7.17.12",
-		"@babel/plugin-transform-runtime": "^7.17.12",
-		"@babel/preset-env": "^7.17.12",
-		"@babel/preset-react": "^7.17.12",
-		"babel-core": "^6.26.3",
-		"babel-eslint": "^10.1.0",
-		"babel-loader": "^8.2.5",
-		"babel-preset-env": "^1.7.0",
-		"babel-preset-react": "^6.24.1",
-		"clean-webpack-plugin": "^4.0.0",
-		"css-loader": "^6.7.1",
-		"eslint": "^8.17.0",
-		"eslint-plugin-react": "^7.30.0",
-		"html-webpack-plugin": "^5.5.0",
-		"mini-css-extract-plugin": "^2.6.0",
-		"prettier": "^2.7.1",
-		"style-loader": "^3.3.1",
-		"webpack": "^5.72.1",
-		"webpack-cli": "^4.9.2",
-		"webpack-dev-server": "^4.9.0"
-	}
+  "name": "netflix_roulette_app",
+  "version": "1.0.0",
+  "description": "ReactJS mentoring home task",
+  "main": "index.js",
+  "scripts": {
+    "start:prod": "npx cross-env NODE_ENV=production node_modules/.bin/webpack-dev-server --mode production",
+    "start:dev": "npx cross-env NODE_ENV=development node_modules/.bin/webpack-dev-server --mode development",
+    "build:prod": "npx cross-env NODE_ENV=production node_modules/.bin/webpack  --mode production",
+    "build:dev": "npx cross-env NODE_ENV=development node_modules/.bin/webpack",
+    "lint": "eslint ./ --ignore-path .eslintignore",
+    "lint:fix": "npm run lint -- --fix",
+    "format": "prettier --write \"{,!(node_modules)/**/}*.js\"",
+    "prepare": "husky install"
+  },
+  "author": "Karolina Habryn",
+  "license": "ISC",
+  "dependencies": {
+    "@babel/eslint-parser": "^7.18.2",
+    "@mdi/js": "^6.7.96",
+    "@mdi/react": "^1.6.0",
+    "material-design-icons": "^3.0.1",
+    "prop-types": "^15.8.1",
+    "react": "^18.1.0",
+    "react-dom": "^18.1.0"
+  },
+  "devDependencies": {
+    "@babel/core": "^7.17.12",
+    "@babel/plugin-proposal-class-properties": "^7.17.12",
+    "@babel/plugin-transform-runtime": "^7.17.12",
+    "@babel/preset-env": "^7.17.12",
+    "@babel/preset-react": "^7.17.12",
+    "babel-core": "^6.26.3",
+    "babel-eslint": "^10.1.0",
+    "babel-loader": "^8.2.5",
+    "babel-preset-env": "^1.7.0",
+    "babel-preset-react": "^6.24.1",
+    "clean-webpack-plugin": "^4.0.0",
+    "css-loader": "^6.7.1",
+    "eslint": "^8.17.0",
+    "eslint-config-prettier": "^8.5.0",
+    "eslint-plugin-react": "^7.30.0",
+    "html-webpack-plugin": "^5.5.0",
+    "husky": "^8.0.1",
+    "lint-staged": "^13.0.2",
+    "mini-css-extract-plugin": "^2.6.0",
+    "prettier": "2.7.1",
+    "style-loader": "^3.3.1",
+    "webpack": "^5.72.1",
+    "webpack-cli": "^4.9.2",
+    "webpack-dev-server": "^4.9.0"
+  },
+  "lint-staged": {
+    "**/*": "prettier --write --ignore-unknown"
+  }
 }
