--- a/package.json
+++ b/package.json
@@ -19,16 +19,19 @@
     "@babel/eslint-parser": "^7.18.2",
     "@mdi/js": "^6.7.96",
     "@mdi/react": "^1.6.0",
+    "@reduxjs/toolkit": "^1.8.2",
+    "babel-polyfill": "^6.26.0",
     "material-design-icons": "^3.0.1",
     "prop-types": "^15.8.1",
     "react": "^18.1.0",
-    "react-dom": "^18.1.0"
+    "react-dom": "^18.1.0",
+    "react-redux": "^8.0.2"
   },
   "devDependencies": {
-    "@babel/core": "^7.17.12",
+    "@babel/core": "^7.18.5",
     "@babel/plugin-proposal-class-properties": "^7.17.12",
     "@babel/plugin-transform-runtime": "^7.17.12",
-    "@babel/preset-env": "^7.17.12",
+    "@babel/preset-env": "^7.18.2",
     "@babel/preset-react": "^7.17.12",
     "babel-core": "^6.26.3",
     "babel-eslint": "^10.1.0",
@@ -46,7 +49,7 @@
     "mini-css-extract-plugin": "^2.6.0",
     "prettier": "2.7.1",
     "style-loader": "^3.3.1",
-    "webpack": "^5.72.1",
+    "webpack": "^5.73.0",
     "webpack-cli": "^4.9.2",
     "webpack-dev-server": "^4.9.0"
   },
