--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -9,7 +9,8 @@
   "env": {
     "es6": true,
     "browser": true,
-    "node": true
+    "node": true,
+    "jest": true
   },
   "extends": ["eslint:recommended", "plugin:react/recommended", "prettier"],
   "settings": {
