--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "formik": "^2.2.9",
     "jest-environment-jsdom": "^28.1.3",
     "material-design-icons": "^3.0.1",
+    "pretty": "^2.0.0",
     "prop-types": "^15.8.1",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
