--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "babel-preset-react": "^6.24.1",
     "clean-webpack-plugin": "^4.0.0",
     "css-loader": "^6.7.1",
+    "cypress": "^10.3.1",
     "eslint": "^8.17.0",
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-react": "^7.30.0",
