--- a/package.json
+++ b/package.json
@@ -13,7 +13,11 @@
     "format": "prettier --write \"{,!(node_modules)/**/}*.js\"",
     "prepare": "husky install",
     "test:dev": "jest --env=jsdom",
-    "test:prod": "jest"
+    "test:prod": "jest",
+    "next:dev": "next dev",
+    "next:build": "next build",
+    "next:start": "next start",
+    "next:lint": "next lint"
   },
   "author": "Karolina Habryn",
   "license": "ISC",
@@ -26,10 +30,11 @@
     "formik": "^2.2.9",
     "jest-environment-jsdom": "^28.1.3",
     "material-design-icons": "^3.0.1",
+    "next": "^12.2.3",
     "pretty": "^2.0.0",
     "prop-types": "^15.8.1",
-    "react": "^18.1.0",
-    "react-dom": "^18.1.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "react-redux": "^8.0.2",
     "react-router-dom": "^6.3.0",
     "react-test-renderer": "^18.2.0"
