--- a/package.json
+++ b/package.json
@@ -64,9 +64,11 @@
     "jest": "^28.1.3",
     "lint-staged": "^13.0.2",
     "mini-css-extract-plugin": "^2.6.0",
+    "node-sass": "^7.0.3",
     "prettier": "2.7.1",
+    "sass-loader": "^13.0.2",
     "style-loader": "^3.3.1",
-    "webpack": "^5.73.0",
+    "webpack": "^5.74.0",
     "webpack-cli": "^4.9.2",
     "webpack-dev-server": "^4.9.0"
   },
