--- a/package.json
+++ b/package.json
@@ -66,6 +66,7 @@
     "mini-css-extract-plugin": "^2.6.0",
     "node-sass": "^7.0.3",
     "prettier": "2.7.1",
+    "sass": "^1.54.9",
     "sass-loader": "^13.0.2",
     "style-loader": "^3.3.1",
     "webpack": "^5.74.0",
